--- a/TrouvTonResto/app/src/main/res/layout/activity_preferences.xml
+++ b/TrouvTonResto/app/src/main/res/layout/activity_preferences.xml
@@ -53,7 +53,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Grignotte"
-        android:id="@+id/checkBox6" />
+        android:id="@+id/checkBox6"
+        android:checked="false" />
 
     <TextView
         android:layout_width="wrap_content"
