--- a/TrouvTonResto/app/src/main/res/layout/fragment_restos.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_restos.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#e0e0e0">
 
     <ListView
         android:layout_width="wrap_content"
@@ -9,7 +10,10 @@
         android:layout_alignParentBottom="false"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/layoutBasListe"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:dividerHeight="12dp"
+        android:background="#e0e0e0"
+        android:divider="#e0e0e0" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -18,14 +22,16 @@
         android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
         android:id="@+id/layoutBasListe"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/background_light"
+        android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/textView5" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/horaire"
+            android:id="@+id/textView7" />
 
         <RelativeLayout
             android:layout_width="match_parent"
