MAJ fragment resto

--- a/TrouvTonResto/app/src/main/res/layout/fragment_resto.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_resto.xml
@@ -1,18 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="A suppr" />
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="30pt">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/tpsAttente"
+            android:textSize="12pt"
+            android:textColor="@android:color/background_dark"
+            android:textAlignment="center" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="100pt"
+            android:id="@+id/imageView2"
+            android:src="@drawable/ic_beurklc"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="5pt"
+            android:layout_marginRight="5pt" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/menu"
+            android:textSize="12pt"
+            android:textColor="@android:color/background_dark"
+            android:textAlignment="center" />
+
+        <ExpandableListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/menuView"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/go"
-        android:id="@+id/goButton" />
-
-</LinearLayout>
+        android:id="@+id/goButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5pt"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary" />
+</RelativeLayout>
