--- a/TrouvTonResto/app/src/main/res/values/colors.xml
+++ b/TrouvTonResto/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#e42618</color>
     <color name="colorPrimaryDark">#444444</color>
     <color name="colorAccent">#666666</color>
+    <color name="white">#FFFFFF</color>
 </resources>
