--- a/TrouvTonResto/app/src/main/res/layout/activity_splash.xml
+++ b/TrouvTonResto/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
 
     <ImageView android:id="@+id/splashscreen" android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/splash"
         android:layout_gravity="center"
         android:scaleHeight="150%"
         android:scaleWidth="150%" />
