--- a/TrouvTonResto/app/src/main/res/values/colors.xml
+++ b/TrouvTonResto/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#e42618</color>
     <color name="colorPrimaryDark">#444444</color>
     <color name="colorAccent">#666666</color>
+    <color name="valeurOk">#4E9A06</color>
+    <color name="valeurMoyenne">#F57900</color>
+    <color name="valeurMauvaise">#A40000</color>
 </resources>
