--- a/TrouvTonResto/app/src/main/res/layout/fragment_resto.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_resto.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="100pt"
-            android:id="@+id/imageView2"
+            android:id="@+id/idGraphe"
             android:src="@drawable/ic_beurklc"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="5pt"
