--- a/TrouvTonResto/app/src/main/res/layout/maker_info_window.xml
+++ b/TrouvTonResto/app/src/main/res/layout/maker_info_window.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="wrap_content"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 <TextView
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/nomResto"
-    android:textSize="25sp"
-    android:textStyle="bold"/>
+    android:textSize="20sp"
+    android:textStyle="bold"
+    android:textAlignment="center" />
 <TextView
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/specialiteResto"/>
+    android:id="@+id/specialiteResto"
+    android:textAlignment="center" />
 </LinearLayout>
