--- a/TrouvTonResto/app/src/main/res/values/google_maps_api.xml
+++ b/TrouvTonResto/app/src/main/res/values/google_maps_api.xml
@@ -4,10 +4,10 @@
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=D5:89:23:EE:12:C8:7D:DB:DA:11:6F:65:FA:AA:05:17:68:FD:34:CC%3Bcom.h4404.trouvtonresto
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=74:D7:F5:5E:DD:61:DA:3F:97:3D:0A:0D:4C:D9:84:2A:4D:93:BC:1E;com.h4404.trouvtonresto
 
     You can also add your credentials to an existing key, using this line:
-    D5:89:23:EE:12:C8:7D:DB:DA:11:6F:65:FA:AA:05:17:68:FD:34:CC;com.h4404.trouvtonresto
+    74:D7:F5:5E:DD:61:DA:3F:97:3D:0A:0D:4C:D9:84:2A:4D:93:BC:1E;com.h4404.trouvtonresto
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -16,6 +16,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyCgYnhy0tHk3dSLAikPToeLHxZkwDdvhv0
+        AIzaSyCQ7jJOA9rZFzECdVCYGksybw5KQq4EyHo
     </string>
 </resources>
