--- a/TrouvTonResto/app/src/main/res/layout/fragment_resto.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_resto.xml
@@ -3,48 +3,92 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
+        android:id="@+id/scrollView"
+        android:fillViewport="true"
         android:layout_marginBottom="30pt">
 
-        <TextView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/tpsAttente"
-            android:textSize="12pt"
-            android:textColor="@android:color/background_dark"
-            android:textAlignment="center" />
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="100pt"
-            android:id="@+id/idGraphe"
-            android:src="@drawable/ic_beurklc"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="5pt"
-            android:layout_marginRight="5pt" />
+            <RelativeLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/menu"
-            android:textSize="12pt"
-            android:textColor="@android:color/background_dark"
-            android:textAlignment="center" />
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/leftButton"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="0dp"
+                    android:layout_alignParentTop="false"
+                    android:layout_marginTop="0dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_resto_left" />
 
-        <ExpandableListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/menuView"
-            android:layout_gravity="center_horizontal" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tpsAttente"
+                    android:textSize="10pt"
+                    android:textColor="@android:color/background_dark"
+                    android:textAlignment="center"
+                    android:layout_alignParentLeft="false"
+                    android:layout_marginLeft="52dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
+                    android:layout_centerInParent="true" />
 
-    </LinearLayout>
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rightButton"
+                    android:layout_gravity="right"
+                    android:layout_alignParentLeft="false"
+                    android:layout_marginLeft="437dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_resto_right" />
+            </RelativeLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="85pt"
+                android:id="@+id/idGraphe"
+                android:src="@drawable/ic_beurklc"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="5pt"
+                android:layout_marginRight="5pt" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/menu"
+                android:textSize="10pt"
+                android:textColor="@android:color/background_dark"
+                android:textAlignment="center" />
+
+            <ExpandableListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/menuView"
+                android:layout_gravity="center_horizontal"
+                android:dividerHeight="0dp"
+                android:showDividers="none"
+                android:divider="@null"/>
+
+        </LinearLayout>
+    </ScrollView>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/go"
         android:id="@+id/goButton"
@@ -52,5 +96,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5pt"
         android:textColor="@color/white"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary"
+        android:layout_marginLeft="4pt"
+        android:layout_marginRight="4pt" />
+
 </RelativeLayout>
