--- a/TrouvTonResto/app/src/main/res/drawable/checkbox_unchecked.xml
+++ b/TrouvTonResto/app/src/main/res/drawable/checkbox_unchecked.xml
@@ -4,5 +4,5 @@
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#ffffff" android:pathData="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z" />
+    <path android:fillColor="#212121" android:pathData="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z" />
 </vector>
