--- a/TrouvTonResto/app/src/main/res/layout/fragment_pref.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_pref.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Castor et Pollux"
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBox1"
         android:layout_row="1"
         android:layout_column="1" />
 
