--- a/TrouvTonResto/app/src/main/res/drawable/border_top_rectangle.xml
+++ b/TrouvTonResto/app/src/main/res/drawable/border_top_rectangle.xml
@@ -7,7 +7,12 @@
     </item>
     <item android:top="1dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@android:color/background_light" />
+            <gradient
+                android:endColor="@android:color/background_light"
+                android:centerColor="@android:color/background_light"
+                android:startColor="#ccc"
+                android:angle="90"
+                android:type="linear" />
         </shape>
     </item>
 </layer-list>
