--- a/TrouvTonResto/app/src/main/res/layout/fragment_restos.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_restos.xml
@@ -26,7 +26,13 @@
         android:id="@+id/layoutBasListe"
         android:layout_alignParentBottom="true"
         android:background="@drawable/border_top_rectangle"
-        android:padding="10dp">
+        android:elevation="6dp"
+        android:focusableInTouchMode="true"
+        android:translationZ="4dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="6dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="8dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,7 +51,8 @@
                 android:id="@+id/seekBar"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/horairePrevision" />
+                android:layout_toLeftOf="@+id/horairePrevision"
+                android:paddingLeft="0dp" />
 
             <TextView
                 android:layout_width="wrap_content"
