--- a/TrouvTonResto/app/src/main/res/drawable/side_nav_bar.xml
+++ b/TrouvTonResto/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#888"
+        android:endColor="#444"
+        android:startColor="#999"
         android:type="linear" />
 </shape>
