--- a/TrouvTonResto/app/src/main/res/layout/fragment_map.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_map.xml
@@ -3,12 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+
+    <com.google.android.gms.maps.MapView
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.h4404.trouvtonresto.CarteFragment" />
+        android:layout_height="match_parent" />
 </LinearLayout>
