--- a/TrouvTonResto/app/src/main/res/layout/fragment_resto.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_resto.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/resto">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,48 +16,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <RelativeLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/leftButton"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="0dp"
-                    android:layout_alignParentTop="false"
-                    android:layout_marginTop="0dp"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_resto_left" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tpsAttente"
-                    android:textSize="10pt"
-                    android:textColor="@android:color/background_dark"
-                    android:textAlignment="center"
-                    android:layout_alignParentLeft="false"
-                    android:layout_marginLeft="52dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginTop="0dp"
-                    android:layout_centerInParent="true" />
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/rightButton"
-                    android:layout_gravity="right"
-                    android:layout_alignParentLeft="false"
-                    android:layout_marginLeft="437dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginTop="0dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_resto_right" />
-            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tpsAttente"
+                android:textSize="9pt"
+                android:textColor="@android:color/background_dark"
+                android:textAlignment="center"
+                android:layout_marginTop="0dp"
+                android:layout_gravity="center" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -71,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/menu"
-                android:textSize="10pt"
+                android:textSize="9pt"
                 android:textColor="@android:color/background_dark"
                 android:textAlignment="center" />
 
