--- a/TrouvTonResto/app/src/main/res/layout/fragment_resto_pager.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_resto_pager.xml
@@ -4,6 +4,51 @@
     android:orientation="vertical"
     android:id="@+id/restos_pager">
 
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#666"
+        android:layout_marginBottom="3pt">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/leftButton"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="0dp"
+            android:layout_alignParentTop="false"
+            android:layout_marginTop="0dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_resto_left" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/info"
+            android:textSize="10pt"
+            android:textColor="#ffffff"
+            android:textAlignment="center"
+            android:layout_alignParentLeft="false"
+            android:layout_marginLeft="52dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:layout_centerInParent="true" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rightButton"
+            android:layout_gravity="right"
+            android:layout_alignParentLeft="false"
+            android:layout_marginLeft="437dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_resto_right" />
+    </RelativeLayout>
+
     <FrameLayout
         android:id="@+id/resto_frame"
         android:layout_width="match_parent"
