--- a/TrouvTonResto/app/src/main/res/layout/nav_header_menu.xml
+++ b/TrouvTonResto/app/src/main/res/layout/nav_header_menu.xml
@@ -15,20 +15,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/person_name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/person_email" />
+        android:src="@drawable/splash"
+        android:layout_gravity="center" />
 
 </LinearLayout>
