--- a/TrouvTonResto/app/src/main/res/layout/fragment_pref.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_pref.xml
@@ -1,66 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="4pt"
+    android:layout_marginRight="4pt"
+    android:layout_marginTop="4pt"
+    android:layout_marginBottom="4pt">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Critère de classement des restaurants"
+            android:id="@+id/textView2" />
+        <RadioGroup
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+            <RadioButton
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:text="Temps d'attente"
+                android:id="@+id/rb1"/>
+            <RadioButton
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:text="Proximité"/>
+        </RadioGroup>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+
+    <Switch
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Restaurants préférés"
-        android:id="@+id/textView3" />
+        android:id="@+id/switch1"
+        android:checked="false"/>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Castor et Pollux"
-        android:id="@+id/checkBox1"
-        android:layout_row="1"
-        android:layout_column="1" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_vertical"
+        android:id="@+id/llparams"
+        android:visibility="gone"/>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Prevert"
-        android:id="@+id/checkBox2" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Grillon"
-        android:id="@+id/checkBox3" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Olivier"
-        android:id="@+id/checkBox4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Castor Gourmand"
-        android:id="@+id/checkBox7" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="RU"
-        android:id="@+id/checkBox5" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Grignotte"
-        android:id="@+id/checkBox6"
-        android:checked="false" />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <Switch
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Critère de classement des restaurants"
-        android:id="@+id/textView2" />
+        android:text="Recevoir des notifications"
+        android:id="@+id/switch2"
+        android:checked="false"/>
 
-</LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_vertical"
+        android:id="@+id/llparams2"
+        android:visibility="gone">
+        <TimePicker
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
