--- a/TrouvTonResto/app/src/main/res/layout/fragment_tuto_page2.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_tuto_page2.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="@drawable/tuto_p2">
 
     <TextView
         android:layout_width="match_parent"
