Ajout selection jour

--- a/TrouvTonResto/app/src/main/res/layout/fragment_pref.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_pref.xml
@@ -32,7 +32,12 @@
             android:visibility="gone">
             <TimePicker
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"/>
+                android:layout_height="fill_parent" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lldays"
+                android:orientation="vertical"/>
         </LinearLayout>
 
         <View
