--- a/TrouvTonResto/app/src/main/res/layout/fragment_pref.xml
+++ b/TrouvTonResto/app/src/main/res/layout/fragment_pref.xml
@@ -21,6 +21,11 @@
             android:id="@+id/switch2"
             android:checked="false"/>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal" />
+
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -30,20 +35,105 @@
             android:gravity="center_vertical"
             android:id="@+id/llparams2"
             android:visibility="gone">
+
             <TimePicker
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
+                android:layout_height="fill_parent"/>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:layout_gravity="center_horizontal" />
+
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/lldays"
-                android:orientation="vertical"/>
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/radiobtn_bck"
+                    android:button="@null"
+                    android:checked="false"
+                    android:gravity="center"
+                    android:textColor="#757575"
+                    android:text="L" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/radiobtn_bck"
+                    android:button="@null"
+                    android:gravity="center"
+                    android:textColor="#757575"
+                    android:text="M" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/radiobtn_bck"
+                    android:gravity="center"
+                    android:button="@null"
+                    android:textColor="#757575"
+                    android:text="M" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/radiobtn_bck"
+                    android:gravity="center"
+                    android:button="@null"
+                    android:textColor="#757575"
+                    android:text="J" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/radiobtn_bck"
+                    android:gravity="center"
+                    android:button="@null"
+                    android:textColor="#757575"
+                    android:text="V" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/radiobtn_bck"
+                    android:gravity="center"
+                    android:button="@null"
+                    android:textColor="#757575"
+                    android:text="S" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/radiobtn_bck"
+                    android:gravity="center"
+                    android:button="@null"
+                    android:textColor="#757575"
+                    android:text="D" />
+            </LinearLayout>
+
+
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,11 +154,19 @@
                 android:layout_height="fill_parent"
                 android:text="Proximité"/>
         </RadioGroup>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal" />
 
     <!--<Switch
         android:layout_width="fill_parent"
@@ -83,6 +181,10 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Restaurants préférés"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
@@ -93,13 +195,6 @@
         android:gravity="center_vertical"
         android:id="@+id/llparams"/>
         <!--android:visibility="gone"/>-->
-
-
-
-
-
-
-
 
     </LinearLayout>
 </ScrollView>
